@@ -2,21 +2,17 @@ require 'abstract_unit'
 
 class ErbUtilTest < Test::Unit::TestCase
   include ERB::Util
-  
-  def test_amp
-    assert_equal '&amp;', html_escape('&')
-  end
-  
-  def test_quot
-    assert_equal '&quot;', html_escape('"')
-  end
 
-  def test_lt
-    assert_equal '&lt;', html_escape('<')
-  end
+  ERB::Util::HTML_ESCAPE.each do |given, expected|
+    define_method "test_html_escape_#{expected.gsub /\W/, ''}" do
+      assert_equal expected, html_escape(given)
+    end
 
-  def test_gt
-    assert_equal '&gt;', html_escape('>')
+    unless given == '"'
+      define_method "test_json_escape_#{expected.gsub /\W/, ''}" do
+        assert_equal ERB::Util::JSON_ESCAPE[given], json_escape(given)
+      end
+    end
   end
   
   def test_rest_in_ascii
